# Rendering_Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  launch.sh
engine/: CMakeLists.txt  Main.cpp
engine/renderer/: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
engine/res/shaders/: basic.sh  texture.sh
engine/statemachine/: CMakeLists.txt  State.cpp  State.h  StateBatchRender.cpp  StateBatchRender.h  StateClearColor.cpp  StateClearColor.h  StateTexture.cpp  StateTexture.h
